# true-earth

./: .gitignore  README.md  package.json
ai_orchestrator/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
ai_orchestrator/proto/: greeter.pb.go  greeter_grpc.pb.go  llm_service.pb.go  llm_service_grpc.pb.go
ai_orchestrator/service/: agent.go  embedding.go  mongo.go
ai_orchestrator/service_mongo/: identifyColl.go  vector-index.go
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs  data.csv  quake.csv
backend/proto/: llm_service.proto
backend/src/: lib.rs  main.rs
backend/src/handlers/: ai.rs  climate.rs  earthquake.rs  em_dat.rs  fire.rs  geographical.rs  health.rs  mod.rs  pollution.rs  weather.rs
backend/src/ingest/: earthquake_event.rs  em_dat_events.rs  fire_event.rs  mod.rs  utils.rs
backend/src/models/: em_dat.rs  event_trait.rs  firms.rs  geographical.rs  mod.rs  pollution.rs  usgs.rs
backend/src/proto/: mod.rs
backend/src/services/: ai.rs  climate.rs  db.rs  firms.rs  mod.rs
backend/src/utils/: event_ingestion.rs  mod.rs
client/: bun.lockb  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/components/: AskAIButton.tsx  ChartBar.tsx  Hero.tsx  LineGraphSection.tsx  Navbar.tsx
client/components/ui/: drawer.tsx
client/lib/: api.ts
client/types/: api.d.ts
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/action/: chat.ts  event.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIChatHistoryDrawer.tsx  AskAIButton.tsx  ChartArea.tsx  ChartBar.tsx  ChatProvider.tsx  DisasterTable.tsx  EnhancedAiChat.tsx  EnhancedWorldGlobe.tsx  MarkdownRenderer.tsx  Navbar.tsx  NewWorldGlobe.tsx  WorldGlobe.tsx
frontend/components/custom_ui/: chatbox.tsx  chathistory.tsx  chatpage.tsx  message-bubble.tsx
frontend/components/ui/: chart.tsx  sheet.tsx  textarea.tsx
frontend/contexts/: GlobeChatContext.tsx
frontend/lib/: utils.ts
proto/: greeter.proto
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
server/src/ingest/: fire_event.rs
server/src/models/: climate.rs  firms.rs  weather_events.rs
server/src/services/: db.rs  geographical.rs  mod.rs  pollution.rs  weather_events.rs
