[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1.1"
csv = "1.3"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing for debugging/logging (optional but recommended)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Tower (used by Axum for middleware)
tower = "0.4"

# Optional: dotenv for loading environment variables
dotenvy = "0.15"

# MongoDB
mongodb = "2.0.0"

